tests/types/errors/compound_bitwise_result_unassignable.mog
#!strict
u8 mask = 240u8;
u16 other = 255u16;
mask &= other;
